<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeekNow</string>
    <string name="subtitle">Week number in your status bar</string>
    <string name="label_current_week">Current week</string>
    <string name="toggle_label">Status bar icon</string>
    <string name="toggle_description">Show week number in the status bar</string>
    <string name="notification_channel_name">Week Number</string>
    <string name="notification_channel_description">Displays the current week number in the status bar</string>
    <string name="first_day_label">First day of week</string>
    <string name="first_day_description">Used to calculate the current week number</string>
    <string name="monday">Mon</string>
    <string name="sunday">Sun</string>
    <string name="icon_size_label">Icon size</string>
    <string name="icon_size_description">Size of the number in the status bar</string>
    <string name="size_s">S</string>
    <string name="size_m">M</string>
    <string name="size_l">L</string>
</resources>
